<resources>
    <string name="app_name">UG Practicas</string>
    <string name="title_dia_detail">Dia Detail</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="asistencia_de_proyecto_de_vinculacion">Asistencia de Proyecto de Vinculacion</string>
    <string name="password">Password</string>
    <string name="entrar">Ingresar</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="n_cedula">N° Cedula</string>
    <string name="telefono_celular">Telefono/Celular</string>
    <string name="email">Email</string>
    <string name="carrera">Carrera</string>
    <string name="facultad">Facultad</string>
    <string name="guardar">Guardar</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="que_actividad">¿Qué actividad ha realizado hoy?</string>
    <string name="cuantos_beneficiados">¿Cuántos son los beneficiados?</string>
    <string name="Cuál_beneficio">¿Cuál es el beneficio de las actividades realizadas?</string>
    <string name="datos_institucionales">Datos Institucionales</string>
    <string name="crear_cuenta">CREAR CUENTA</string>
    <string name="datos_personales">Datos Personales</string>
    <string name="nombre_del_proyecto">nombre del proyecto</string>
    <string name="title_diapractica_list">DiasPracticas</string>
    <string name="title_diapractica_detail">DiaPractica Detail</string>
    <string name="add_photo">añadir_photo</string>
    <string name="todo">TODO</string>
    <string name="vicerrectorado_de_formacion_academica">Vicerrectorado de Formacion Academica</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="otros">Otros</string>
    <string name="genero">Genero</string>
    <string name="contrase_a">Contraseña</string>
    <string name="pregunta2">Pregunta2</string>
    <string name="pregunta1">Pregunta1</string>
    <string name="pregunta3">Pregunta3</string>
    <string name="fecha">Fecha</string>
    <string-array name="array_carrera">
        <item>Lic. Sistemas de Informacion</item>
        <item>Ingenieria Industrial</item>
        <item>Teleinformatica</item>
    </string-array>
    <string name="title_activity_practica">PracticaActivity</string>
    <string name="usuario">usuario</string>
    <string name="sing_out">Sing Out</string>
    <string name="ver_datos">Ver Datos</string>
    <string name="hora">Hora</string>
    <string name="hora_de_entrada">Hora de entrada</string>
    <string name="hora_de_salida">Hora de salida</string>
    <string name="estudiante">Estudiante</string>
    <string name="foto">Docente</string>
    <string name="soy">Soy:</string>
    <string name="title_activity_practica_registro_maps">Map</string>
</resources>
