<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <ImageView
                android:id="@+id/ivfotoestudiante"
                android:layout_width="131dp"
                android:layout_height="118dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:src="@mipmap/ic_launcher"
                android:contentDescription="@string/todo"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/ivfotoestudiante">

                <TextView
                    android:id="@+id/nombreest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/nombre"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/apellidoest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@+id/nombreest"
                    android:text="@string/apellidos"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/telefonoest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/nombreest"
                    android:text="@string/telefono_celular" />

                <TextView
                    android:id="@+id/correoest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/telefonoest"
                    android:text="@string/email" />

                <TextView
                    android:id="@+id/carreraest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/correoest"
                    android:text="@string/carrera" />

                <TextView
                    android:id="@+id/facultadest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/carreraest"
                    android:text="@string/facultad" />
            </RelativeLayout>

            <Button
                android:id="@+id/ibelogin"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ver_datos"
                android:textColor="#000000"
                android:layout_below="@id/ivfotoestudiante"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>